fix: added formula to get the correct size to set the todos in the todos-list gap and size

--- a/src/styles/ListTodos.scss
+++ b/src/styles/ListTodos.scss
@@ -18,7 +18,7 @@
   overflow-y: auto;
   height: 500px;
   width: 400px;
-  top: 17rem;
+  top: 16rem;
   margin-left: 70%;
 }
 
@@ -49,6 +49,7 @@
   border-radius: 5px;
   overflow: hidden;
   width: 360px;
+  text-align: center;
 
   p {
     margin-left: 5px;
